GNOME Bugzilla – Bug 731542
base: introspection fixes
Last modified: 2014-06-28 08:30:30 UTC
Patches coming soon.
Created attachment 278298 [details] [review] base: add (nullable) annotations to return values
Created attachment 278299 [details] [review] base: assorted introspection fixes and additions
commit eebff7b0487bffbac775208ef25a66b19a35d4ab Author: Evan Nemerson <evan@nemerson.com> Date: Wed Jun 11 17:15:39 2014 -0700 base: assorted introspection fixes and additions https://bugzilla.gnome.org/show_bug.cgi?id=731542 commit c38f3254f8ae34749385d7a720ac9052844572c6 Author: Evan Nemerson <evan@nemerson.com> Date: Wed Jun 11 17:12:20 2014 -0700 base: add (nullable) annotations to return values https://bugzilla.gnome.org/show_bug.cgi?id=731542