base: add (nullable) annotations to return values

https://bugzilla.gnome.org/show_bug.cgi?id=731542